# audioreach-conf

./: configure.ac
qcom/: configure.ac
qcom/qli/: configure.ac
qcom/qli/qcs9100/: config.pc.in
